# terminus

./: .gitignore  CLAUDE.md  LICENSE  README.md  REPO_STRUCTURE.md  benchmark-config.example.json  play.bat  play.sh  pyproject.toml  run_benchmark.py  terminus.spec  test_engine.py
.github/workflows/: ci.yml  release.yml
docs/gifs/: .gitkeep
docs/llm-benchmark/: README.md  engine-integration.md  error-handling.md  implementation-plan.md  metrics.md  prompt-template.md  schemas.md  ui-flow.md
docs/tapes/: README.md  build.tape  colony.tape  main-menu.tape
product-backlog/: BACKLOG.md  epic-01-foundation.md  epic-02-game-engine.md  epic-03-server-networking.md  epic-04-tui-client.md  epic-05-game-balance.md  epic-06-persistence.md  epic-07-visual-overhaul.md  epic-08-testing.md  epic-09-packaging.md  epic-10-stretch-goals.md  epic-12-llm-benchmark.md
terminus/: __init__.py  __main__.py  config.py
terminus/audio/: __init__.py  player.py  sounds.py  synth.py
terminus/benchmark/: __init__.py  agent.py  error_handler.py  events.py  mock_orchestrator.py  orchestrator.py  orchestrator_v2.py  prompt.py  recorder.py  report.py  (+8 more)
tests/: conftest.py  test_agent_interface.py  test_api_validation.py  test_audio.py  test_balance_data.py  test_benchmark.py  test_benchmark_integration.py  test_buildings.py  test_catastrophe.py  test_catastrophe_selection.py  test_dimensions_tier2.py  test_engine_fixes.py  test_epic8_integration.py  test_integration.py  test_load.py  test_market.py  test_metrics_tier1.py  test_multiplayer.py  test_opponents.py  test_orchestrator_v2.py  test_p2p_trading.py  test_persistence.py  test_reconnection.py  test_resources.py  test_scoring.py  test_sprint7.py  test_sprint8.py  test_state_machine.py  test_validation_fuzz.py
tools/: __init__.py  build_exe.py  load_test.py
(+90 files in other folders)
