[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminus-game"
version = "0.2.1"
description = "Multiplayer CLI survival strategy game"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Terminus Dev" }]
keywords = ["terminal", "game", "multiplayer", "strategy", "tui", "cli", "survival"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
]
dependencies = [
    "textual>=0.40,<1.0",
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20,<1.0",
    "httpx>=0.24,<1.0",
    "websockets>=11.0,<14.0",
    "pydantic>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
]

[project.urls]
Homepage = "https://github.com/kushal-DL/terminus"
Repository = "https://github.com/kushal-DL/terminus"
Issues = "https://github.com/kushal-DL/terminus/issues"

[tool.hatch.build.targets.wheel]
packages = ["terminus"]

[project.scripts]
terminus = "terminus.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
build = [
    "pyinstaller>=6.0",
]
audio = [
    "simpleaudio>=1.0,<2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
